<resources>
    <string name="app_name">Weather</string>
    <string name="moscow">Moscow</string>
    <string name="ivanovo">Ivanovo</string>
    <string name="cloudy">Cloudy</string>
    <string name="temperature" translatable="false">+11°</string>
    <string name="enter_city">Enter city</string>
    <string name="information">Information</string>
    <string name="apply">Apply</string>
    <string name="setting">Setting</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_vk" translatable="false">VK</string>
    <string name="nav_support">Support</string>
    <string name="search">Search</string>
    <string name="dialog_btn">Dialog</string>
    <string name="choose_the_button_color">Choose the button color</string>
    <string name="btn_red">Red</string>
    <string name="btn_green">Green</string>
</resources>
