<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/city_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/moscow"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start"
                android:text="@string/cloudy"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/city_name"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:text="@string/temperature"
            android:gravity="end"
            android:textSize="82sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <Button
    android:id="@+id/setting_btn"
    android:layout_width="200dp"
    android:layout_height="60dp"
    android:text="@string/setting"
    app:layout_constraintTop_toBottomOf="@+id/header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="16dp"
    android:background="@color/white"/>

    <Button
        android:id="@+id/dialog_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/dialog_btn"
        app:layout_constraintTop_toBottomOf="@+id/setting_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:background="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>