<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/city_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:gravity="start"
                    android:text="@string/moscow"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="start"
                    android:text="@string/cloudy"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/city_name"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/temperature"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:text="@string/temperature"
                android:gravity="end"
                android:textSize="82sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/setting_btn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/setting"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

