<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp"
        android:background="@color/ser">

        <EditText
            android:id="@+id/edit_city"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/enter_city"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Switch
            android:id="@+id/switch_info"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/information"
            android:checked="true"
            app:layout_constraintTop_toBottomOf="@+id/edit_city"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_info"/>

        <Button
            android:id="@+id/setting_Ok"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/apply"
            app:layout_constraintTop_toBottomOf="@+id/list_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>